--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SK=django-insecure-g(np+(c1_b#c!vae&o00dl$t^1_ar(610zhm0d=dyaet(*9w6^
+EADDRESS="allplay470@gmail.com"
+EAPASSWORD="yexeznwugwiqtsvp"
